♻️ change booking id from int to string and a whole bunch of other stuff
